[project]
name = "pypager"
description = """Pure Python pager (like "more" and "less")."""
readme = "README.rst"
authors = [{ name = "Jonathan Slenders" }]
requires-python = ">=3.6"
dependencies = ["prompt_toolkit>=3.0.0,<3.1.0", "pygments"]
license = { file = "LICENSE" }
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jonathanslenders/pypager"

[project.scripts]
pypager = "pypager.entry_points.run_pypager:run"

[tool.black]
target-version = ['py36']


[tool.isort]
# isort configuration that is compatible with Black.
multi_line_output = 3
include_trailing_comma = true
known_first_party = ""
known_third_party = "prompt_toolkit,pygments"
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
